# skills-getting-started-with-github-copilot

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-tests.yml
src/: app.py
src/static/: app.js  styles.css
tests/: test_app.py
